Add publications to the publications page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,19 +6,90 @@
 @string{ijcai = {Proceedings of the International Joint Conference on Artificial Intelligence (IJCAI)}}
 @string{corl = {Proceedings of the Conference on Robot Learning (CoRL)}}
 
-@article{zhang2024guidance,
+@article{srikanth2025red,
+  author={Siddharth Srikanth and
+            Freddie Liang and
+            Ya{-}Chuan Hsu and
+            Varun Bhatt and
+            Shihan Zhao and
+            Henry Chen and
+            Bryon Tjanaka and
+            Minjune Hwang and
+            Akanksha Saran and
+            Daniel Seita and
+            Aaquib Tabrez and
+            Stefanos Nikolaidis},
+  title={Red-Teaming Vision-Language-Action Models via Quality Diversity Prompt Generation for Robust Robot Policies},
+  journal={(under review)},
+  year={2025},
+  preview={qdig.png},
+  selected={true},
+}
+
+@article{srikanth2025algorithmic,
+  author       = {Siddharth Srikanth and
+                  Varun Bhatt and
+                  Boshen Zhang and
+                  Werner Hager and
+                  Charles Michael Lewis and
+                  Katia P. Sycara and
+                  Aaquib Tabrez and
+                  Stefanos Nikolaidis},
+  title        = {Algorithmic Prompt Generation for Diverse Human-like Teaming and Communication
+                  with Large Language Models},
+  journal      = {(under review)},
+  year         = {2025},
+  url          = {https://arxiv.org/abs/2504.03991},
+  timestamp    = {Mon, 19 May 2025 13:58:47 +0200},
+  arxiv        = {2504.03991},
+  preview      = {planqd.png},
+  selected     = {true},
+}
+
+@article{qian2024quality,
+  title={QD-MAPPER: A Quality Diversity Framework to Automatically Evaluate Multi-Agent Path Finding Algorithms in Diverse Maps},
+  author={Qian, Cheng and Zhang, Yulun and Bhatt, Varun and Fontaine, Matthew Christopher and Nikolaidis, Stefanos and Li, Jiaoyang},
+  journal={(under review)},
+  year={2025},
+  url={https://arxiv.org/abs/2409.06888},
+  arxiv={2409.06888},
+  preview={mapf_bench.png},
+}
+
+@article{hedayatian2025systematic,
+  author={Hedayatian, Saeed and Bhatt, Varun and Tjanaka, Bryon and Lewis, Charles Michael and Sycara, Katia P. and Nikolaidis, Stefanos},
+  title={Systematic Generation of Diverse Teams for Improved Multi-Agent Collaboration},
+  journal={(under review)},
+  year={2025},
+  preview={qd_zsc.png},
+}
+
+@inproceedings{palmas2025efficient,
+  author={Palmas, Matteo and
+            Bhatt, Varun and
+            Zhao, Shihan and
+            Nikolaidis, Stefanos and
+            Lange, Ralph and
+            Klauck, Michaela},
+  title={Efficient Quality Diversity Optimization with Monte Carlo Bayesian Sampling},
+  booktitle={Proceedings of the Genetic and Evolutionary Computation Conference Companion},
+  year={2025},
+  url={https://dl.acm.org/doi/10.1145/3712255.3726674},
+}
+
+@inproceedings{zhang2024guidance,
   author       = {Yulun Zhang and
-                  Jiang He and
+                  He Jiang and
                   Varun Bhatt and
                   Stefanos Nikolaidis and
                   Jiaoyang Li},
   title        = {Guidance Graph Optimization for Lifelong Multi-Agent Path Finding},
-  journal      = {CoRR abs/2402.01446},
+  booktitle    = ijcai,
   year         = {2024},
-  url          = {https://doi.org/10.48550/arXiv.2402.01446},
-  doi          = {10.48550/ARXIV.2402.01446},
-  timestamp    = {Fri, 09 Feb 2024 12:18:48 +0100},
+  url          = {https://www.ijcai.org/proceedings/2024/35},
+  timestamp    = {Fri, 25 Oct 2024 10:23:49 +0200},
   arxiv        = {2402.01446},
+  code         = {https://github.com/lunjohnzhang/ggo_public},
   preview      = {ggo.png},
 }
 
